# auto-research-prediction-markets

./: .gitignore  README.md  program.md  pyproject.toml  research_report.html  research_report_ma.html
docs/superpowers/plans/: 2026-03-30-prediction-markets-research.md
research_tasks/: 01_binary_bs_vol_mispricing.txt  02_last_second_gbm_edge.txt  03_opening_second_inefficiency.txt  04_bs_binary_option_pricing.txt  05_gamma_scalp_optimization.txt
scripts/: build_arpm_dataset_c3_jsonl.py  generate_research_report.py  research_health_check.sh  resume_three_research_parallel.sh  run_three_research_parallel.sh  stop_arpm_research.sh
src/arpm/: __init__.py  __main__.py  cli.py  config.py
src/arpm/agent/: __init__.py  claude_client.py  research_loop.py
src/arpm/backtest/: __init__.py  engine.py  fees.py
src/arpm/data/: __init__.py  loaders.py  schema.py  splits.py
src/arpm/domain/: __init__.py  knowledge.py
src/arpm/evaluation/: __init__.py  metrics.py
src/arpm/experiments/: __init__.py  store.py
src/arpm/strategies/: __init__.py  base.py  builtin.py
tests/: test_backtest.py  test_metrics.py  test_research_loop.py
tests/fixtures/: sample_trades.csv
